Refactor backend to match microlab_v2 logic while keeping lab management theme
🔄 Major Restructuring (Based on microlab_v2):

**New Entity: LabWork (Projects analog)**
- Лабораторні роботи з назвою, описом та автором
- Список необхідного обладнання (requiredEquipment)
- Статуси: DRAFT, PUBLISHED, ARCHIVED
- Timestamps: createdAt, updatedAt

**Enhanced Entity: Equipment (Components analog)**
- ✅ documentationLink field (аналог link з microlab_v2)
- ✅ description field
- ✅ status: AVAILABLE, IN_USE, MAINTENANCE, BROKEN
- ✅ timestamps: createdAt, updatedAt

**Enhanced Entity: Reservation (Orders analog)**
- ✅ approve/reject functionality (аналог approveOrder)
- ✅ labWork reference (опціонально)
- ✅ equipment list (ManyToMany)
- ✅ approvedBy and approvedAt fields
- ✅ status: PENDING, APPROVED, REJECTED, CANCELLED

**New Components:**
1. LabWorkRepository - queries for lab works
2. LabWorkService & LabWorkServiceImpl - CRUD operations
3. LabWorkController - REST endpoints
4. LabWork DTOs (Create, Update, Response)

**Enhanced ReservationService:**
- ✅ approve(id) - схвалити резервацію (аналог approveOrder)
- ✅ reject(id) - відхилити резервацію
- ✅ getPendingReservations() - отримати PENDING резервації
- ✅ Integration with LabWork and Equipment

**API Endpoints:**

LabWorks:
- POST   /api/labworks - створити лабораторну роботу
- GET    /api/labworks - всі лабораторні роботи
- GET    /api/labworks/{id} - одна лабораторна робота
- GET    /api/labworks/published - опубліковані
- GET    /api/labworks/my - мої лабораторні роботи
- PUT    /api/labworks/{id} - оновити
- DELETE /api/labworks/{id} - видалити

Reservations (Enhanced):
- POST   /api/reservations/{id}/approve - схвалити (ADMIN only)
- POST   /api/reservations/{id}/reject - відхилити (ADMIN only)
- GET    /api/reservations/pending - PENDING резервації (ADMIN only)

**Security:**
- ✅ @EnableMethodSecurity for @PreAuthorize
- ✅ Role-based access: ADMIN can approve/reject
- ✅ /api/labworks/** authenticated

**Enhanced Da